--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>netchat</module>
         <module>lesson2-mvc</module>
+        <module>lesson2-hibernate</module>
+        <module>lesson3-hibernate</module>
     </modules>
 
 
