--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>netchat</module>
-        <module>lesson2-mvc</module>
-        <module>lesson2-hibernate</module>
+<!--        <module>lesson2-mvc</module>-->
+<!--        <module>lesson2-hibernate</module>-->
         <module>lesson3-hibernate</module>
-        <module>lesson4</module>
+        <module>lesson-4</module>
+        <module>lesson5</module>
     </modules>
 
 
