--- a/lesson-4/src/main/resources/application.properties
+++ b/lesson-4/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:postgresql://10.0.55.10:5432/surveys
@@ -5,10 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/geek?createDatabaseIfNotExist=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.properties.hibernate.validator.apply_to_ddl=false
-
-server.port=8088
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
