--- a/lesson6/src/main/resources/application.properties
+++ b/lesson6/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 server.port=8088
 
+spring.mvc.hiddenmethod.filter.enabled=true
+
+server.servlet.context-path=/mvc-app
+
